--- a/public/sona/css/style.css
+++ b/public/sona/css/style.css
@@ -100,7 +100,7 @@ ul, ol {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
-.section-title h2 {
+.section-title h2.section-title {
 	font-size: 44px;
 	color: #19191a;
 	line-height: 58px;
